pykframework/src/tests/unit/kore/test-data/definitions/pass/test-attribute-1.kore
[]

module TEST-ATTRIBUTE-1

  hooked-sort Nat{} [hook{}("Nat")]

endmodule []
