pykframework/src/tests/unit/kore/test-data/definitions/should-fail/test-hooks-9.kore
[]

module TEST-HOOKS-9

  hooked-sort S{} [hook{}("S.S")]

  symbol f{}() : S{} [hook{}("S.f")]

endmodule []
